--- a/test.ipynb
+++ b/test.ipynb
@@ -24,6 +24,17 @@
    "id": "9fc762e9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56024ee3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
